[package]
name = "cr8s-fe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
gloo-net = "0.3.0"
serde = "1.0.171"
serde_json = "1.0.103"
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
